--- a/main.html
+++ b/main.html
@@ -10,7 +10,33 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+		<form method="post">
+			<label for="name">Name:</label>
+			<input id="name" type="text" required><br><br>
+			<label for="email">Email:</label>
+			<input id="email" type="email" required><br><br>
+			<label>Gender:</label>
+			<input id="male" type="radio" name=gender required>
+			<label for="male">Male</label>
+			<input id="female" type="radio" name=gender required>
+			<label for="female">Female</label>
+			<input id="others" type="radio" name=gender required>
+			<label for="others">Others</label><br><br>
+			<label for="cars">Car Brands:</label>
+			<select id="cars">
+				<option disabled selected hidden>Choose an Option</option>
+				<option>BMW</option>
+				<option>Audi</option>
+				<option>Mercedez</option>
+			</select><br><br>
+			<label for="carage">Car Age:</label>
+			<input id="carage" type="number" required><br><br>
+			<label for="dop">Date of Purchase:</label>
+			<input id="dop" type="date" required><br><br>
+			<label for="password">Password:</label>
+			<input id="password" type="password" required><br><br>
+			<input type="submit">
+		</form>
 </body>
 
 </html>
