--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 			<input id="dop" type="date" required><br><br>
 			<label for="password">Password:</label>
 			<input id="password" type="password" required><br><br>
-			<input type="submit">
+			<button type="submit">Submit</button>
 		</form>
 </body>
 
